
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;
 int assert (int) ;
 char* memmem (char*,int,char const*,int ) ;
 int strlen (char const*) ;

__attribute__((used)) static void leak_parse(char *in, int in_len, char **start, char **end) {
 const char *needle = "notify: ";
 *start = memmem(in, in_len, needle, strlen(needle));
 assert(*start != ((void*)0));
 *start += strlen(needle);

 assert(in_len > 0);
 assert(in[in_len - 1] == '\n');
 *end = &in[in_len - 2];
 while (*end > in && **end != '\n')
  (*end)--;
 assert(*end > in);
 while (*end > in && **end != '/')
  (*end)--;
 assert(*end > in);
 assert((*end)[1] = 'p' && (*end)[2] == 'i' && (*end)[3] == 'd');

 assert(*end >= *start);
}
